fix: add-changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="item">
                 <img src="image/2.jpg">
                 <div class="content">
-                    <div class="title">For Hirers</div>
+                    <div class="title">For Recruiters</div>
                     <div class="topic">A New Way to Find Talent</div>
                     <div class="des">
                         <strong>Effortless Hiring:</strong>
